🚀 Реализация поиска: SearchServiceImpl со сбором релевантности и выдачей